# ironbox

./: .firebaserc  .gitignore  CLAUDE.md  DESIGN.md  README.md  autostart-toggle.ps1  firebase.json  firestore.rules  index.html  manifest.json  sw.js  vercel.json  widget.html  widget.webmanifest  기획.md  위젯 실행.bat  자동실행 토글.bat
.github/workflows/: build-widget.yml  firebase-hosting.yml
css/: style.css  widget.css
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: widget.json
desktop/src-tauri/src/: main.rs
docs/: 2026-06-01-firebase-backend-design.md  배포-방법.md  위젯-바탕화면에-올리기.md  위젯-작업정리.md
docs/changelog/: 20260603_수정사항요약.md
docs/superpowers/plans/: 2026-06-02-firebase-migration.md
docs/superpowers/specs/: 2026-06-03-detailed-task-add-design.md  2026-06-03-journal-fields-ux-design.md  2026-06-03-notes-design.md  2026-06-03-slot-quickadd-sticky-notes-design.md  2026-06-03-task-notes-design.md  2026-06-03-weekly-view-design.md  2026-06-07-notebook-design.md  2026-06-08-windows-widget-design.md  2026-06-09-doubleclick-edit-design.md  2026-06-19-note-print-pdf-design.md
js/: app.js  auth.js  calendar.js  firebase-config.js  firebase-init.js  gcal.js  notebook-format.js  notebook.js  notes.js  store.js  timebox.js  weekview.js  widget.js
test/: carryover.test.js  notebook-deploy.test.js  notebook-format.test.js  notes-render.test.js
