[package]
name = "ironbox-widget"
version = "0.1.0"
description = "IRONBOX 바탕화면 위젯"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
